# Rocket

./: .editorconfig  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benchmarks/src/: routing.rs
contrib/db_pools/codegen/: Cargo.toml
contrib/db_pools/lib/: Cargo.toml
contrib/db_pools/lib/src/: config.rs  database.rs  diesel.rs  lib.rs  pool.rs
contrib/dyn_templates/: Cargo.toml  README.md
contrib/dyn_templates/src/: context.rs  fairing.rs  lib.rs  metadata.rs  template.rs
contrib/dyn_templates/src/engine/: handlebars.rs  minijinja.rs  mod.rs  tera.rs
contrib/sync_db_pools/codegen/: Cargo.toml
contrib/sync_db_pools/lib/: Cargo.toml
contrib/sync_db_pools/lib/src/: connection.rs  lib.rs  poolable.rs
contrib/sync_db_pools/lib/tests/: databases.rs  (+1 more)
contrib/ws/: Cargo.toml
contrib/ws/src/: websocket.rs
core/codegen/: Cargo.toml
core/codegen/src/: exports.rs  lib.rs  syn_ext.rs
core/codegen/tests/: catcher.rs  from_form.rs  from_param.rs  responder.rs  route-ranking.rs  route-raw.rs  route-uniqueness.rs  route.rs  typed-uris.rs
core/http/: Cargo.toml
core/http/src/: lib.rs  method.rs  raw_str.rs  status.rs
core/lib/: Cargo.toml
core/lib/fuzz/: Cargo.toml
core/lib/src/: erased.rs  error.rs  lib.rs  lifecycle.rs  outcome.rs  phase.rs  rocket.rs  sentinel.rs  server.rs  state.rs
core/lib/tests/: adhoc-uri-normalizer.rs  file_server.rs  form_method-issue-45.rs  msgpack_encoding.rs  sentinel.rs
docs/guide/: 02-quickstart.md  05-requests.md  06-responses.md  10-configuration.md  11-deploying.md  12-pastebin.md
docs/tests/: Cargo.toml
examples/chat/: Cargo.toml
examples/chat/src/: main.rs  tests.rs
examples/config/: Rocket.toml
examples/config/src/: tests.rs
examples/databases/: Cargo.toml  README.md
examples/databases/.sqlx/: query-11e3096becb72f427c8d3911ef4327afd9516143806981e11f8e34d069c14472.json  query-4415c35941e52a981b10707fe2e1ceb0bad0e473701e51ef21ecb2973c76b4df.json  query-bea4ef6e25064f6b383e854f8bc2770d89cfaf9859d0bfca78b2ca24627675b7.json
examples/databases/src/: diesel_mysql.rs
examples/fairings/src/: main.rs
examples/forms/src/: main.rs
examples/hello/: Cargo.toml
examples/hello/src/: main.rs
examples/pastebin/: Cargo.toml
examples/pastebin/src/: paste_id.rs
examples/responders/src/: main.rs
examples/state/src/: request_local.rs
examples/static-files/src/: main.rs  tests.rs
examples/templating/: Cargo.toml
examples/templating/src/: main.rs  minijinja.rs  tests.rs
examples/tls/: Rocket.toml
examples/tls/private/: client.pem  gen_certs.sh
examples/tls/src/: main.rs  redirector.rs
examples/todo/: Cargo.toml
examples/todo/src/: main.rs  tests.rs
examples/upgrade/src/: main.rs
scripts/: test.sh
testbench/: Cargo.toml
testbench/src/: client.rs  config.rs  main.rs  runner.rs  server.rs
testbench/src/servers/: bind.rs  http_extensions.rs  ignite_failure.rs  infinite_stream.rs  mod.rs  mtls.rs  no_content.rs  sni_resolver.rs  tls.rs  tls_resolver.rs  tracing.rs
(+96 files in other folders)
