[workspace]
resolver = "2"
members = [
  "core/lib/",
  "core/codegen/",
  "core/http/",
  "contrib/db_pools/codegen/",
  "contrib/db_pools/lib/",
  "contrib/sync_db_pools/codegen/",
  "contrib/sync_db_pools/lib/",
  "contrib/dyn_templates/",
  "contrib/ws/",
  "docs/tests",
]

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(nightly)'] }
rust_2018_idioms = "warn"
async_fn_in_trait = "allow"
refining_impl_trait = "allow"
# unreachable_pub = "warn"
# single_use_lifetimes = "warn"
# missing_docs = "warn"

[workspace.lints.clippy]
type_complexity = "allow"
module_inception = "allow"
multiple_bound_locations = "allow"
manual_range_contains = "allow"
