[package]
name = "rocket_db_pools"
version = "0.1.0"
authors = ["Sergio Benitez <sb@sergio.bz>", "Jeb Rosen <jeb@jebrosen.com>"]
description = "Rocket async database pooling support"
repository = "https://github.com/rwf2/Rocket/tree/master/contrib/db_pools"
readme = "../README.md"
keywords = ["rocket", "framework", "database", "pools"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.75"

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[features]
# deadpool features
deadpool_postgres = ["deadpool-postgres", "deadpool"]
deadpool_redis = ["deadpool-redis", "deadpool"]
# sqlx features
sqlx_mysql = ["sqlx", "sqlx/mysql", "log"]
sqlx_postgres = ["sqlx", "sqlx/postgres", "log"]
sqlx_sqlite = ["sqlx", "sqlx/sqlite", "log"]
sqlx_macros = ["sqlx/macros"]
# diesel features
diesel_postgres = ["diesel-async/postgres", "diesel-async/deadpool", "deadpool", "diesel"]
diesel_mysql = ["diesel-async/mysql", "diesel-async/deadpool", "deadpool", "diesel"]
# implicit features: mongodb

[dependencies.rocket]
path = "../../../core/lib"
version = "0.6.0-dev"
default-features = false

[dependencies.rocket_db_pools_codegen]
path = "../codegen"
version = "0.1.0"

[dependencies.deadpool]
version = "0.12.1"
default-features = false
features = ["rt_tokio_1", "managed"]
optional = true

[dependencies.deadpool-postgres]
version = "0.14"
default-features = false
features = ["rt_tokio_1"]
optional = true

[dependencies.deadpool-redis]
version = "0.16"
default-features = false
features = ["rt_tokio_1"]
optional = true

[dependencies.mongodb]
version = "3"
default-features = false
features = ["compat-3-0-0", "rustls-tls"]
optional = true

[dependencies.diesel-async]
version = "0.6.0"
default-features = false
features = ["async-connection-wrapper"]
optional = true

[dependencies.diesel]
version = "2.1"
default-features = false
optional = true

[dependencies.sqlx]
version = "0.8"
default-features = false
features = ["runtime-tokio-rustls"]
optional = true

[dependencies.log]
version = "0.4"
default-features = false
optional = true

[dev-dependencies.rocket]
path = "../../../core/lib"
default-features = false
features = ["json"]

[build-dependencies]
version_check = "0.9"
